# hid-behavior-detector

./: .gitignore  README.md
analyzer/: CMakeLists.txt
analyzer/include/: analyzer.h  detector.h  event.h  parser.h  report.h
analyzer/results/: combined_report.txt
analyzer/src/: analyzer.cpp  detector.cpp  event.cpp  main.cpp  parser.cpp  report.cpp
data/: combined.jsonl  combined_2026-03-22_16-43-09.jsonl  normal_2026-03-22_16-45-56.jsonl
results/: data_merged_report.txt  manual_report.txt  normal_2026-03-22_16-45-56_report.txt  normal_2026-04-12_17-09-18_report.txt  normal_2026-04-13_20-55-26_report.txt  normal_2026-04-13_21-02-20_report.txt  normal_2026-04-13_21-02-30_report.txt  normal_2026-04-14_22-15-50_report.txt  scripted_2026-03-22_22-07-48_report.txt  scripted_2026-03-22_22-10-11_report.txt  scripted_2026-04-13_20-55-41_report.txt  scripted_2026-04-13_21-00-28_report.txt  scripted_2026-04-13_21-00-38_report.txt  scripted_2026-04-13_21-00-49_report.txt  scripted_2026-04-13_21-00-59_report.txt  scripted_2026-04-13_21-01-09_report.txt  scripted_2026-04-13_21-01-20_report.txt  scripted_2026-04-13_21-01-30_report.txt  scripted_2026-04-13_21-01-40_report.txt  scripted_2026-04-13_21-17-54_report.txt  scripted_2026-04-13_21-18-04_report.txt  scripted_2026-04-13_21-18-14_report.txt  scripted_2026-04-13_21-18-23_report.txt  scripted_2026-04-13_21-18-33_report.txt  scripted_2026-04-13_21-18-43_report.txt  scripted_2026-04-13_21-18-52_report.txt  scripted_2026-04-13_21-19-02_report.txt  scripted_2026-04-14_22-09-34_report.txt  summary.tsv  test_combined_report.txt  (+17 more)
(+38 files in other folders)
